Fixed some layout issues across the site

--- a/styles/main.css
+++ b/styles/main.css
@@ -220,7 +220,7 @@ ul {
 li { 
 	display: block;
 	letter-spacing: 2px;
-	height: 30px;
+	height: 40px;
 }
 
 li:hover { 
